<resources>
    <string name="app_name">Grocery Basket</string>
    <string name="app_icon">App Icon</string>

    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="totalAmount">Total Amount</string>
    <string name="currencySymbol">₹</string>

    <string name="settingsButton">Settings Button</string>
    <string name="addFab">Add Item Icon</string>

    <string name="addItemTitle">Add Item to Basket</string>
    <string name="itemNameEditText">Enter Item Name <font color='#FF0000'>*</font></string>
    <string name="quantityEditText">Enter Item Quantity <font color='#FF0000'>*</font></string>
    <string name="priceEditText">Enter Item Price/Qty <font color='#FF0000'>*</font></string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>

    <string name="editItemTitle">Edit item in Basket</string>
    <string name="quantityShort">Qty</string>

    <string name="deleteDialogTitle">Delete Item</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="deleteAll_question">Are you sure you want to delete all?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="itemDetail"> Item Detail</string>
    <string name="itemQuantitySub">Item Quantity</string>
    <string name="itemPriceSub">Item Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="finger_print">Finger Print</string>
    <string name="about_app">About App</string>

    <string name="deleteAllDialogTitle">Delete All Items</string>
    <string name="app_name_sub">App Name</string>
    <string name="version">Version</string>
    <string name="versionNumber">3.0</string>
    <string name="createdBy">Created By</string>
    <string name="OwnerName">Rammohan Locharla</string>
    <string name="google_drive_link">Google Drive</string>
    <string name="driveLink">Click here</string>
    <string name="linksTitle">For Complete code, click on the below links</string>
    <string name="githubSub">GitHub</string>
    <string name="gitHub_Link1">Link 1</string>
    <string name="gitHub_Link2">Link 2</string>
    <string name="delete_all_items">Delete All Items</string>

</resources>