<?xml version="1.0" encoding="UTF-8" ?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:fontFamily="@font/text_font"
                android:textStyle="italic|bold"/>

            <TextView
                android:id="@+id/itemQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantityShort"
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:fontFamily="@font/text_font"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/price"
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:fontFamily="@font/text_font"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/itemAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalAmount"
                android:textColor="@color/textColor"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:fontFamily="@font/text_font"
                android:textStyle="italic"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>