<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground"
    tools:context=".ItemDetailFragment">

<com.google.android.material.card.MaterialCardView
    android:id="@+id/itemDetailCardView"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="@color/cardBackground"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    app:strokeColor="@color/cyan"
    app:strokeWidth="1dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemDetailHeading"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/itemDetail"
            android:fontFamily="@font/text_font2"
            android:textColor="@color/textColor"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/SubHeadingLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/itemDetailHeading"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/itemNameSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/text_font"
                    android:text="@string/item_name"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/itemQuantitySub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/text_font"
                    android:text="@string/itemQuantitySub"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/itemNameSub" />

                <TextView
                    android:id="@+id/itemPriceSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/text_font"
                    android:text="@string/itemPriceSub"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/itemQuantitySub" />

                <TextView
                    android:id="@+id/itemTotalSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/text_font"
                    android:text="@string/totalAmount"
                    android:textColor="@color/textColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/itemPriceSub" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/text_font"
            android:text="@string/item_name"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/SubHeadingLL"
            app:layout_constraintTop_toBottomOf="@id/itemDetailHeading" />

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/text_font"
            android:text="@string/quantityShort"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/SubHeadingLL"
            app:layout_constraintTop_toBottomOf="@id/itemName" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/text_font"
            android:text="@string/currencySymbol"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/SubHeadingLL"
            app:layout_constraintTop_toBottomOf="@id/itemQuantity" />



        <TextView
            android:id="@+id/itemAmount"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/text_font"
            android:text="@string/currencySymbol"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/SubHeadingLL"
            app:layout_constraintTop_toBottomOf="@id/itemPrice" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button_back"
            android:fontFamily="@font/text_font2"
            android:textStyle="bold"
            android:text="@string/deleteButton"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/cancelButton_red"
            android:textSize="20sp"
            app:backgroundTint="@color/buttonBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editButton"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button_back"
            android:text="@string/editButton"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:fontFamily="@font/text_font2"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:backgroundTint="@color/buttonBackground"
            app:layout_constraintStart_toEndOf="@id/deleteButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
