<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemFragment"
    android:background="@color/cardBackground">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addItemCardView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="20dp"
        android:elevation="5dp"
        app:strokeColor="@color/cyan"
        app:strokeWidth="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/addItemTitle"
                android:textColor="@color/textColor"
                android:fontFamily="@font/text_font2"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameLabel"
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/itemNameEditText"
                android:textColorHint="@color/textColorHint_grey"
                app:boxCornerRadiusBottomStart="15dp"
                app:hintTextColor="@color/cyan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cyan"
                    android:fontFamily="@font/text_font"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemQuantityLabel"
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/quantityEditText"
                android:textColorHint="@color/textColorHint_grey"
                app:hintTextColor="@color/cyan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemNameLabel"
                app:boxCornerRadiusBottomStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cyan"
                    android:fontFamily="@font/text_font"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemPriceLabel"
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/priceEditText"
                android:textColorHint="@color/textColorHint_grey"
                app:hintTextColor="@color/cyan"
                app:layout_constraintTop_toBottomOf="@id/itemQuantityLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:prefixText="@string/currencySymbol"
                app:prefixTextColor="@color/cyan"
                app:boxCornerRadiusBottomStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/cyan"
                    android:fontFamily="@font/text_font"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>
            
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_back"
                android:text="@string/cancelButton"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:fontFamily="@font/text_font2"
                android:textStyle="bold"
                android:textColor="@color/cancelButton_red"
                app:backgroundTint="@color/buttonBackground"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button_back"
                android:text="@string/saveButton"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/text_font2"
                android:textColor="@color/saveButton_green"
                app:backgroundTint="@color/buttonBackground"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>